move openapi-generation into own module
